@@ -9,4 +9,6 @@ fork({
    check("within fork");
 });
 
+sleep(1000);
+
 check("outside of fork");
