@@ -1,3 +1,4 @@
 Trace: &check('within fork') at forker.sl:9
-Trace: &fork(&closure[forker.sl:9]#2) = sleep.bridges.io.IOObject@d0d45b at forker.sl:8
-Trace: &check('outside of fork') at forker.sl:12
+Trace: &fork(&closure[forker.sl:9]#2) = sleep.bridges.io.IOObject@96f4b5 at forker.sl:8
+Trace: &sleep(1000) at forker.sl:12
+Trace: &check('outside of fork') at forker.sl:14
